Introduce new replication subsystem